animation-fill-out: forward added

--- a/scss/style.css
+++ b/scss/style.css
@@ -274,7 +274,7 @@
   animation-name: down, fade;
   animation-duration: 1s;
   animation-delay: 0s, 5s;
-  animation-fill-mode: ease-in-out;
+  animation-fill-mode: forwards;
 }
 .custom-alert--inactive {
   display: none;
